src/goupile/client/ui.css
/* ... */
/* -------------------- Base elements -------------------- */

a {
    color: var(--anchor_color);
    text-decoration: underline;
}
a:hover { color: var(--anchor_color_n1); }

*:focus, *:focus + label {
    outline: 2px solid #cdcdcd;
    z-index: 99999;
}

.disabled {
    opacity: 0.5;
    filter: saturate(0%);
}

button {
    padding: 0.3em 10px;
    background: white;
    border: 1px solid #dfdfdf;
    color: black;
    font-family: inherit;
    font-size: 1em;
    cursor: pointer;
    border-radius: var(--button_rounding);
}
button.color {
    background-color: var(--color);
    border: 1px solid var(--color);
    color: white;
}
button:not(:disabled) { cursor: pointer; }
button:disabled {
    background-color: #bbb;
    border-color: #bbb;
    color: #eee;
    cursor: not-allowed;
}
button::-moz-focus-inner { border: 0; }
button:not(:disabled):hover { filter: brightness(80%) contrast(160%); }

/* -------------------- Toolbars -------------------- */

.ui_toolbar {
    position: sticky;
    left: 0;
    top: 0;
    height: 3.2em;
    min-height: 3.2em;
    display: flex;
    background: linear-gradient(var(--menu_color_n1), var(--menu_color));
    color: white;
    z-index: 9999;
}

.ui_toolbar *:focus, .ui_toolbar *:focus + label {
    outline-width: 2px;
    outline-style: dotted;
}

.ui_toolbar button {
    display: flex;
    height: 100%;
    box-sizing: border-box;
    background-color: var(--color, inherit);
    border: 0;
    color: white;
    text-decoration: none;
    border-radius: 0;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    font-size: 1.1em;
    line-height: 1em;
    align-items: center;
    filter: none !important;
}
.ui_toolbar button.active { background-color: var(--menu_color_n2); }
.ui_toolbar button:not(.active):hover { background-color: var(--menu_color_n1); }
.ui_toolbar button.active:hover { background-color: var(--menu_color_n3); }
.ui_toolbar button:disabled {
    background-color: var(--menu_color_n3) !important;
    color: #888;
}
.ui_toolbar button.icon {
    padding-left: 36px;
    background-position: 6px;
}
.ui_toolbar > hr {
    border: none;
    border-left: 0.5px solid var(--menu_color_n3);
}
html.small .ui_toolbar button.icon {
    min-width: 3em;
    max-width: 3em;
    padding: 0 !important;
    text-indent: 200px;
    text-overflow: clip;
    background-position-x: center;
}
.ui_toolbar button.icon:empty { background-position-x: center; }

.ui_toolbar > .drop {
    position: relative;
    display: inline-block;
    height: 100%;
    margin: 0;
    background-color: inherit;
}
.ui_toolbar > .drop > button { padding-right: 24px; }
.ui_toolbar > .drop > button.icon:empty { background-position-x: 35%; }
.ui_toolbar > .drop > button::after {
    position: absolute;
    right: 2px;
    width: 22px;
    height: 16px;
    background-image: url('icons/down.webp');
    background-repeat: no-repeat;
    background-position-y: center;
    background-size: 22px;
    content: ' ';
}
.ui_toolbar > .drop.disabled {
    background-color: #bbb;
    border-color: #bbb;
    filter: brightness(80%) !important;
}
.ui_toolbar > .drop.disabled > button:disabled {
    color: inherit;
    cursor: not-allowed;
    pointer-events: none;
}
.ui_toolbar > .drop > div {
    display: none;
    position: absolute;
    max-height: calc(100vh - 6em);
    overflow: auto;
    min-width: 220px;
    background-color: inherit;
    z-index: 9999;
}
.ui_toolbar > .drop.up > button::after { background-image: url('icons/up.webp'); }
.ui_toolbar > .drop.up > div { bottom: 100%; }
.ui_toolbar > .drop.right > div { right: 0; }
.ui_toolbar > .drop > div button {
    height: 2.4em;
    min-height: 2.4em;
    text-align: left;
}
.ui_toolbar > .drop > div hr {
    width: 94%;
    border: none;
    border-top: 0.5px solid var(--menu_color_n3);
    height: 3px;
}
.ui_toolbar > .drop > div hr:first-child,
    .ui_toolbar > .drop > div hr:last-child { display: none; }
.ui_toolbar > .drop.active { background-color: var(--menu_color_n1); }
.ui_toolbar > .drop.active > div {
    display: flex;
    flex-direction: column;
}
.ui_toolbar > .drop > div button:not(.active):hover { background-color: var(--menu_color_n2); }
html.small .ui_toolbar > .drop > button.icon::after { display: none; }

.ui_toolbar > .drop .expand {
    display: flex;
    flex-direction: column;
}
.ui_toolbar > .drop .expand > button { text-align: center; }
.ui_toolbar > .drop .expand > div {
    display: flex;
    flex-direction: column;
    font-size: 0.9em;
}
.ui_toolbar > .drop .expand > div > button {
    display: flex;
    font-style: italic;
    background: var(--menu_color_n2);
    align-items: center;
}
.ui_toolbar > .drop .expand > div > button.active { background-color: var(--menu_color_n3); }
.ui_toolbar > .drop .expand > div > button:not(.active):hover { background-color: var(--menu_color_n3); }

/* -------------------- Panels -------------------- */

#ui_panels {
    height: calc(100% - 3.2em);
    display: flex;
}
#ui_panels > div {
    position: relative;
    flex: 1;
    overflow-y: auto;
    display: flex;
    flex-direction: column;
}
#ui_panels > div.padded { padding: 2em; }
#ui_panels > div.padded::after {
    display: block;
    min-height: 2em;
    content: "";
}

/* -------------------- Dialogs and popups -------------------- */

.ui_dialog.screen, .ui_dialog.modal {
    display: none;
    position: fixed;
    left: 0;
    top: 0;
    width: 100vw;
    height: 100vh;
    box-sizing: border-box;
    justify-content: center;
    align-items: center;
}
.ui_dialog.screen { background: white; }
.ui_dialog.modal { background: rgba(255, 255, 255, 0.9); }
.ui_dialog.screen.active, .ui_dialog.modal.active { display: flex; }
.ui_dialog.screen > div, .ui_dialog.modal > div {
    display: block;
    min-width: 280px;
    max-height: calc(100% - 20px);
    box-sizing: border-box;
    overflow-y: auto;
    background: #f8f8f8;
}
/* ... */

